--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@stylistic/eslint-plugin": "^4.2.0",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-vue": "^10.0.0",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "tailwindcss": "3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.31.0",
     "unplugin-auto-import": "^19.1.2",
