--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.9.8",
+    "lodash-es": "^4.17.21",
+    "mathjs": "^14.4.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/node": "^22.15.3",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
@@ -27,6 +32,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
+    "sass": "^1.87.0",
     "tailwindcss": "3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.31.0",
